[project]
name = "tracer"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Angelo Fallaria", email = "ba.fallaria@gmail.com"},
]
dependencies = [
    "rich>=13.7.0",
    "result>=0.16.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
